# book-to-obsidian-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
lib/: __init__.py  extractor.py  splitter.py
prompts/: chapter-worker.md  concept-worker.md  moc-worker.md
scripts/: book_extract.py  book_info.py  book_split.py  fix_dangling_links.py
templates/: chapter.md  concept.md  moc.md
